--- a/list/.htaccess
+++ b/list/.htaccess
@@ -1,6 +1,6 @@
 order deny,allow
 allow from all
 
-php_flag display_startup_errors off
-php_flag display_errors off
-php_flag log_errors on
+# php_flag display_startup_errors off
+# php_flag display_errors off
+# php_flag log_errors on
