--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,8 @@ SQL/devdata/*
 .vscode/*
 
 vote/php/config_lhbf.ini
+vote/php/config.ini
+
+vote/index.html
+vote/php/config.ini
+list/debug.php
