--- a/vote/.htaccess
+++ b/vote/.htaccess
@@ -1,6 +1,7 @@
 order deny,allow
 allow from all
+DirectoryIndex index.html index.php
 
-php_flag display_startup_errors off
-php_flag display_errors off
-php_flag log_errors on
+# php_flag display_startup_errors off
+# php_flag display_errors off
+# php_flag log_errors on
