config återinlagd för kompabilitet med lhbf-regler

--- a/vote/php/config.ini
+++ b/vote/php/config.ini
@@ -1,6 +1,6 @@
 [db]
 host = 'localhost';
-database = 'webvote';
-user = 'staffanu';
-password = '';
+database = 'webvote2';
+user = 'lhbf_net';
+password = '7pFarYfi';
 
