öl&etiketter inkl tävlingnummer läses från shbf_eventreg db

--- a/vote/php/config.ini
+++ b/vote/php/config.ini
@@ -3,4 +3,9 @@ host = 'localhost';
 database = 'webvote3';
 user = 'lhbf_net';
 password = '7pFarYfi';
+[db2_shbfevent]
+host = 'localhost';
+database = 'shbfhems_eventreg';
+user = 'lhbf_net';
+password = '7pFarYfi'; 
 
