--- a/vote/php/config_template.ini
+++ b/vote/php/config_template.ini
@@ -3,4 +3,8 @@ host = 'localhost';
 database = 'webvote3';
 user = '';
 password = '';
-
+[db2_shbfevent]
+host = 'localhost';
+database = 'shbfhems_eventreg';
+user = '';
+password = ''; 
