--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,30 @@ vote/php/config.ini
 vote/php/config.ini
 vote/php/config_shbf.ini
 rate/php/error_log
+rate/data/list_fv1.txt
+rate/data/list_fv2.txt
+rate/data/list_fv3.txt
+rate/data/list_fv4.txt
+rate/data/list_fv5.txt
+rate/data/list_fv6.txt
+rate/data/list_fv7.txt
+rate/data/list_fv8.txt
+rate/data/list_fv9.txt
+rate/data_old/list_fv1.txt
+rate/data_old/list_fv2.txt
+rate/data_old/list_fv3.txt
+rate/data_old/list_fv4.txt
+rate/data_old/list_fv5.txt
+rate/data_old/list_fv6.txt
+rate/data_old/list_fv7.txt
+rate/data_old/list_fv8.txt
+rate/data_old/list_fv9.txt
+rate/data/list_fv1.txt
+rate/data/list_fv2.txt
+rate/data/list_fv3.txt
+rate/data/list_fv4.txt
+rate/data/list_fv5.txt
+rate/data/list_fv6.txt
+rate/data/list_fv7.txt
+rate/data/list_fv8.txt
+rate/data/list_fv9.txt
